--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -7,7 +7,7 @@
 </head>
 <body>
   <header>
-    <h1>My Blog</h1>
+    <h1>My Blog By Francisco</h1>
     <nav>
       <a href="/">Home</a>
       <a href="/new">New Post</a>
